[gd_scene load_steps=16 format=1]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Images/sprite sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 22.5825

[sub_resource type="Animation" id=2]

resource/name = "BlueAirLeft"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=3]

resource/name = "BlueAirRight"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=4]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=5]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=8]

resource/name = "RedAirLeft"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]

resource/name = "RedAirRight"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=10]

length = 0.01
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=12]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[node name="Player1" type="RigidBody2D"]

transform/pos = Vector2( 492.131, 332.188 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.22363, 0, 0, 1.49022, 0.136195, -0.933339 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
action_move_left = "player1_move_left"
action_move_right = "player1_move_right"
action_jump = "player1_jump"
animation_idle_left = "RedIdleLeft"
animation_idle_right = "RedIdleRight"
animation_walk_left = "RedWalkLeft"
animation_walk_right = "RedWalkRight"
animation_air_left = "RedAirLeft"
animation_air_right = "RedAirRight"

[node name="Player1Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 6
hframes = 6
frame = 23

[node name="animation" type="AnimationPlayer" parent="Player1Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BlueAirLeft = SubResource( 2 )
anims/BlueAirRight = SubResource( 3 )
anims/BlueIdleLeft = SubResource( 4 )
anims/BlueIdleRight = SubResource( 5 )
anims/BlueWalkLeft = SubResource( 6 )
anims/BlueWalkRight = SubResource( 7 )
anims/RedAirLeft = SubResource( 8 )
anims/RedAirRight = SubResource( 9 )
anims/RedIdleLeft = SubResource( 10 )
anims/RedIdleRight = SubResource( 11 )
anims/RedWalkLeft = SubResource( 12 )
anims/RedWalkRight = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.136195, -0.933339 )
transform/scale = Vector2( 2.22363, 1.49022 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LeftFloorRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( -25, 0 )
enabled = true
cast_to = Vector2( 0, 35 )
layer_mask = 1
type_mask = 7

[node name="LeftCeilingRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( -30, 0 )
enabled = true
cast_to = Vector2( 0, -35 )
layer_mask = 1
type_mask = 7

[node name="CenterCeilingRaycast" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 0, -35 )
layer_mask = 1
type_mask = 7

[node name="RightCeilingRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( 30, 0 )
enabled = true
cast_to = Vector2( 0, -35 )
layer_mask = 1
type_mask = 7

[node name="RightFloorRaycast" type="RayCast2D" parent="."]

transform/pos = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 0, 35 )
layer_mask = 1
type_mask = 7


